[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "shared/derive",
    "shared/parse",
    "shared/serde",
    "shared/serde/derive",
    "socket/client",
    "socket/server",
    "socket/shared",
    "adapters/hecs/client",
    "adapters/hecs/server",
    "adapters/hecs/shared",
    "adapters/bevy/client",
    "adapters/bevy/server",
    "adapters/bevy/shared",
]
